--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 actix-web = "4.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
+tokio = { version = "1", features = ["full"] }
+dotenv = "0.15"
